--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel ='stylesheet', href="./css/qna.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap" rel="stylesheet">  
 </head>
 <body>
     <div class="container">
@@ -23,10 +23,9 @@
         <p>
           나랑 어울리는 버진칵테일은 무엇일까요? <br>
           아래 시작하기 버튼을 눌러 시작해볼까요?
-
         </p>
-        <div class="d-grid gap-2 col-6 mx-auto">
-            <button class="btn btn-dark" type="button" onclick="js:begin()"> 시작하기 </button>
+        <div class="d-grid gap-2 col-5 mx-auto py-3">
+            <button class="btn btn-dark mx-10 py-2" type="button" onclick="js:begin()"> 시작하기 </button>
           </div>
       </section>
       <section id="qna">
@@ -34,10 +33,14 @@
           <div class="statusBar">
           </div>
         </div> -->
+       
         <div class="qBox my-5 py-3 mx-auto">
   
         </div>
         <div class="answerBox">
+  
+        </div>
+        <div class="tmi  my-3 py-3 mx-auto">
   
         </div>
       </section>
