--- a/index.html
+++ b/index.html
@@ -1,54 +1,59 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel ='stylesheet', href="./css/default.css">
-    <link rel ='stylesheet', href="./css/main.css">
-    <link rel ='stylesheet', href="./css/qna.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel='stylesheet' , href="./css/default.css">
+    <link rel='stylesheet' , href="./css/main.css">
+    <link rel='stylesheet' , href="./css/qna.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap" rel="stylesheet">  
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <div class="container">
-      <section id="main" class="mx-auto my-5 py-5 px-3">
-        <h3>나와 어울리는 버진칵테일</h3>
-        <div class="col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
-          <img src="./img/main.png" alt="mainImage" class="img-fluid">
-        </div>
-        <p>
-          나랑 어울리는 버진칵테일은 무엇일까요? <br>
-          아래 시작하기 버튼을 눌러 시작해볼까요?
-        </p>
-        <div class="d-grid gap-2 col-5 mx-auto py-3">
-            <button class="btn btn-dark mx-10 py-2" type="button" onclick="js:begin()"> 시작하기 </button>
-          </div>
-      </section>
-      <section id="qna">
-        <!-- <div class="status mx-auto mt-5">
-          <div class="statusBar">
-          </div>
-        </div> -->
-       
-        <div class="qBox my-5 py-3 mx-auto">
-  
-        </div>
-        <div class="answerBox">
-  
-        </div>
-        <div class="tmi  my-3 py-3 mx-auto">
-  
-        </div>
-      </section>
-      <section id="result">
-        
-      </section>
-      <script src="./js/data.js" charset="utf-8"></script>
-      <script src="./js/start.js" charset="utf-8"></script>
+        <section id="main" class="mx-auto my-5 py-5 px-3">
+            <h3>나와 어울리는 버진칵테일</h3>
+            <div class="col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
+                <img src="./img/main.png" alt="mainImage" class="img-fluid">
+            </div>
+            <p>
+                나랑 어울리는 버진칵테일은 무엇일까요? <br>
+                아래 시작하기 버튼을 눌러 시작해볼까요?
+            </p>
+            <div class="d-grid gap-2 col-5 mx-auto py-3">
+                <button class="btn btn-dark mx-10 py-2" type="button" onclick="js:begin()"> 시작하기 </button>
+            </div>
+        </section>
+        <section id="qna">
+            <div class="status">
+                <div class="statusBar">
+                </div>
+            </div>
+
+            <div class="qBox my-5 py-3 mx-auto">
+
+            </div>
+            <div class="answerBox">
+
+            </div>
+            <div class="tmi  my-3 py-3 mx-auto">
+
+            </div>
+        </section>
+        <section id="result">
+
+        </section>
+        <script src="./js/data.js" charset="utf-8"></script>
+        <script src="./js/start.js" charset="utf-8"></script>
     </div>
-  </body>
+</body>
+
 </html>
