add cocktail data

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="virgin cocktail test">
     <meta name="description" content="virgin cocktail test">
     <!-- sns share -->
-    <meta property="og:url" content="https://twelvelovetype.netlify.app" />
+    <!--meta property="og:url" content="https://ae9b0012d57d.ngrok.io/" /-->
     <meta property="og:title" content="virgin cocktail test" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="img/main.png" />
@@ -33,10 +33,10 @@
 
 <body>
     <div class="container text-center" style="padding: 30px;">
-        <section id="main" class="mx-auto my-5 py-5 px-3">
+        <section id="main" class="mx-auto my-3 py-5 px-3" >
             <!-- <h3>나와 어울리는 버진칵테일</h3> -->
             <div class="col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
-                <img src="./img/main.png" alt="mainImage" class="img-fluid">
+                <img src="./img/main.png" alt="mainImage" class="img-fluid" width = "70%">
             </div >
             <p class="start">
                 나랑 어울리는 버진칵테일은 무엇일지 <br>
@@ -62,7 +62,7 @@
 
             </div>
         </section>
-        <section id="result" class="mx-auto my-5 py-5 px-3">
+        <section id="result" class="mx-auto my-5 px-3">
             <h4>당신과 어울리는 칵테일은</h4>
             
             <div id="resultImg" class="my-3 col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
