--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <meta name="keywords" content="virgin cocktail test">
     <meta name="description" content="virgin cocktail test">
     <!-- sns share -->
-    <!--meta property="og:url" content="https://ae9b0012d57d.ngrok.io/" /-->
+    
+    <meta property="og:url" content="https://virgincocktail.netlify.app" />
     <meta property="og:title" content="virgin cocktail test" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="img/main.png" />
@@ -29,6 +30,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700&display=swap"
         rel="stylesheet">
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <script>
+        Kakao.init('758a2a93a292f1a6e09653bebf099def');
+        Kakao.isInitialized();
+    </script>
 </head>
 
 <body>
@@ -75,10 +81,14 @@
             <div class="resultDesc">
 
             </div>
-            <button type="button" class="kakao mt-3 py-2 px-3" onclick="js:setShare()">공유하기</button>
+            <div>
+                <button type="button" class="kakao mt-3 py-2 px-3" onclick="js:setShare()">공유하기</button>
+            </div>
+            <button type="button" class="retest mt-3 py-2 px-3" onclick="js:Begin()">검사 다시하기 </button>
         </section>
         <script src="./js/data.js" charset="utf-8"></script>
         <script src="./js/start.js" charset="utf-8"></script>
+        <script src="./js/share.js" charset="utf-8"></script>
     </div>
 </body>
 
