--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div>
                 <button type="button" class="kakao mt-3 py-2 px-3" onclick="js:setShare()">공유하기</button>
             </div>
-            <button type="button" class="retest mt-3 py-2 px-3" onclick="js:Begin()">검사 다시하기 </button>
+            <!-- <button type="button" class="retest mt-3 py-2 px-3" onclick="js:Begin()">검사 다시하기 </button> -->
         </section>
         <script src="./js/data.js" charset="utf-8"></script>
         <script src="./js/start.js" charset="utf-8"></script>
