--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 나랑 어울리는 버진칵테일은 무엇일지 <br>
                 아래 시작하기 버튼을 눌러 알아볼까요?
             </p>
-            <div class="d-grid gap-2 col-5 mx-auto py-3">
+            <div class="d-grid gap-2 mx-auto py-3">
                 <button class="button" type="button" onclick="js:begin()"> 시작하기 </button>
             </div>
         </section>
@@ -74,15 +74,15 @@
             <div id="resultImg" class="my-3 col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
 
             </div>
-            <div class="resultname">
+            <div class="resultname my-3">
 
             </div>
-            <hr class ="divider">
-            <div class="resultDesc">
+            
+            <div class="resultDesc my-3">
 
             </div>
             <div>
-                <button type="button" class="kakao mt-3 py-2 px-3" onclick="js:setShare()">공유하기</button>
+                <button type="button" class="kakao my-3" onclick="js:setShare()">공유하기</button>
             </div>
             <!-- <button type="button" class="retest mt-3 py-2 px-3" onclick="js:Begin()">검사 다시하기 </button> -->
         </section>
