--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
 <body>
     <div class="container text-center" style="padding: 30px;">
-        <section id="main" class="mx-auto my-3 py-5 px-3" >
+        <section id="main" class="mx-auto my-3" >
             <!-- <h3>나와 어울리는 버진칵테일</h3> -->
-            <div class="col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
-                <img src="./img/main.png" alt="mainImage" class="img-fluid" width = "70%">
+            <div class="col-lg-6 col-md-8 col-sm-10 col-12 mx-auto my-5">
+                <img src="./img/main.png" alt="mainImage" class="img-fluid" width = "50%">
             </div >
             <p class="start">
                 나랑 어울리는 버진칵테일은 무엇일지 <br>
@@ -68,7 +68,7 @@
 
             </div>
         </section>
-        <section id="result" class="mx-auto my-5 px-3">
+        <section id="result" class="mx-auto my-5">
             <h4>당신과 어울리는 칵테일은</h4>
             
             <div id="resultImg" class="my-3 col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
