--- a/index.html
+++ b/index.html
@@ -42,15 +42,16 @@
         <section id="main" class="mx-auto my-3" >
             <!-- <h3>나와 어울리는 버진칵테일</h3> -->
             <div class="col-lg-6 col-md-8 col-sm-10 col-12 mx-auto my-5">
-                <img src="./img/main.png" alt="mainImage" class="img-fluid" width = "50%">
+                <img src="./img/main.png" alt="mainImage" class="img-fluid">
             </div >
-            <p class="start">
+            <p class="start" style="font-size: 14px;">
                 나랑 어울리는 버진칵테일은 무엇일지 <br>
                 아래 시작하기 버튼을 눌러 알아볼까요?
             </p>
-            <div class="d-grid gap-2 mx-auto py-3">
-                <button class="button" type="button" onclick="js:begin()"> 시작하기 </button>
-            </div>
+                <div class="d-grid gap-2 mx-auto py-3">
+                    <button class="button" type="button" onclick="js:begin()" style="float:left;"> 시작하기 </button>
+                    <button class="hellocock" type="button" onclick="location.href = 'https://apps.apple.com/kr/app/hellocock/id1557630853?l=en'" style="float:left;"> 칵테일가게 구경가기 🍒 </button>
+                </div>
         </section>
         <section id="qna">
             <div class="status">
