공유하기 url 수정

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="virgin cocktail test">
 
     <!-- sns share -->
-    <meta property="og:url" content="https://virgincocktail.netlify.app" />
+    <meta property="og:url" content="https://hellocock-virgin.netlify.app" />
     <meta property="og:title" content="virgin cocktail test" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="img/main.png" />
@@ -65,10 +65,13 @@
             </div>
         </section>
         <section id="qna">
-            <div class="status">
-                <div class="statusBar">
+            <header>
+                <div class="status">
+                    <div class="statusBar">
+                    </div>
                 </div>
-            </div>
+            </header>
+
 
             <div class="qBox my-5 py-3 mx-auto">
 
@@ -103,14 +106,18 @@
             <div class="buttons d-grid gap-2 mx-auto">
                 <button type="button" class="gohome" onclick="location.href ='https://www.hellocock.org/redirection/virgin/store'">칵테일 구매하기✨</button>
                 <button type="button" class="gohome">칵테일 만들어보기👀</button>
-                <button type="button" class="kakao" onclick="js:setShare()">공유하기</button>
+                <u class="retest my-3" style="font-size: 13px; color:gray;" onclick="location.href='../index.html'">다시하기</u>
             </div>
+            <footer>
+                <button type="button" class="kakao" onclick="js:setShare()">공유하기</button>
+            </footer>
 
         </section>
         <script src="./js/data.js" charset="utf-8"></script>
         <script src="./js/start.js" charset="utf-8"></script>
         <script src="./js/share.js" charset="utf-8"></script>
     </div>
+
 </body>
 
 </html>
