add cocktail compatibility

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 
 <body>
-    <div class="container text-center mx-auto my-3 px-5 py-3">
+    <div class="container text-center mx-auto my-3 px-5 py-2">
         <section id="main" class="mx-auto my-3">
             <img src="./img/hellocock.svg" alt="0" width="100px">
             <!-- <h3>나와 어울리는 버진칵테일</h3> -->
@@ -100,6 +100,19 @@
             <div class="resultDesc my-4">
 
 
+            </div>
+
+            <div class="compatibility mx-auto">
+                <div id="bestCocktail" class="item mx-auto p-3" width="100" height="100">
+                    <p>최고의 궁합</p>
+                </div>
+                <!-- <img src="./img/image-10.png" alt="10" width="85px" onclick="location.href='./result-13.html'"> -->
+
+
+                <div id="worstCocktail" class="item mx-auto p-3" width="100" height="100">
+                    <p>최악의 궁합</p>
+                </div>
+                <!-- <img src="../img/image-14.png" alt="14" width="70px"> -->
             </div>
 
 
