--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
             </div>
 
-            <div class="resultDesc my-4">
+            <!-- <div class="resultDesc my-4">
 
 
             </div>
@@ -106,24 +106,27 @@
                 <div id="bestCocktail" class="item mx-auto p-3" width="100" height="100">
                     <p>최고의 궁합</p>
                 </div>
-                <!-- <img src="./img/image-10.png" alt="10" width="85px" onclick="location.href='./result-13.html'"> -->
+                
 
 
-                <div id="worstCocktail" class="item mx-auto p-3" width="100" height="100">
-                    <p>최악의 궁합</p>
-                </div>
-                <!-- <img src="../img/image-14.png" alt="14" width="70px"> -->
+            <div id="worstCocktail" class="item mx-auto p-3" width="100" height="100">
+                <p>최악의 궁합</p>
             </div>
+           
+    </div>
 
 
-            <div class="buttons d-grid gap-2 mx-auto">
-                <button type="button" class="gohome" onclick="location.href ='https://www.hellocock.org/redirection/virgin/store'">칵테일 구매하기✨</button>
-                <button type="button" class="gohome">칵테일 만들어보기👀</button>
-                <u class="retest my-3" style="font-size: 13px; color:gray;" onclick="location.href='../index.html'">다시하기</u>
-            </div>
-            <footer>
-                <button type="button" class="kakao" onclick="js:setShare()">공유하기</button>
-            </footer>
+    <div class="buttons d-grid gap-2 mx-auto">
+        <button type="button" class="gohome" onclick="location.href ='https://www.hellocock.org/redirection/virgin/store'">칵테일 구매하기✨</button>
+        <button type="button" class="gohome">칵테일 만들어보기👀</button>
+        <u class="retest my-3" style="font-size: 13px; color:gray;" onclick="location.href='../index.html'">다시하기</u>
+    </div>
+    <div>
+
+    </div>
+    <footer>
+        <button type="button" class="kakao" onclick="js:setShare()">공유하기</button>
+    </footer>-->
 
         </section>
         <script src="./js/data.js" charset="utf-8"></script>
