--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
     <!-- sns share -->
     <meta property="og:url" content="https://hellocock-virgin.netlify.app" />
-    <meta property="og:title" content="virgin cocktail test" />
+    <meta property="og:title" content="나만의 버진 칵테일 찾기✨" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="img/main.png" />
-    <meta property="og:description" content="virgin cocktail test" />
+    <meta property="og:description" content="나랑 잘 어울리는 버진칵테일은 무엇일까요?" />
 
     <!--favicon-->
     <link rel="shortcut icon" href="img/favicon.png">
@@ -76,7 +76,7 @@
                 <img src="./img/main.png" alt="mainImage" class="img-fluid" width="80%">
             </div>
             <p class="start" style="font-size: 14px;">
-                나랑 어울리는 버진칵테일은 무엇일지 <br> 아래 시작하기 버튼을 눌러 알아볼까요?
+                나랑 잘 어울리는 버진칵테일은 무엇일지 <br> 아래 시작하기 버튼을 눌러 알아볼까요?
             </p>
             <div class="d-grid gap-2 mx-auto py-3">
                 <button class="button" type="button" onclick="js:begin()" style="float:left;"> 시작하기 </button>
